Ensure oplog cannot be truncated due to capped deletions in standalone mode

XMLWordPrintableJSON

    • Fully Compatible
    • Repl 2018-09-10, Repl 2018-09-24, Repl 2019-02-25, Storage NYC 2019-03-25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the oldest oplog entries are truncated, replication recovery may not be able to succeed. We are recommending that backup services insert into the oplog as a standalone so replication can do its own recovery to a point-in-time, but this requires that the oplog can grow indefinitely.

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Judah Schvimer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: