SERVER-36772 Ensure oplog history cannot be truncated in standalone mode with the WT storage engine.

Adds an 'allowOplogTruncation' storageGlobalParam, which is set to false for standalones.